--- a/privacy.html
+++ b/privacy.html
@@ -8,13 +8,13 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="">
   <meta property="og:image" content="">
-  <meta name="twitter:title" content="Privacy Policy - Hypixel">
+  <meta name="twitter:title" content="Política de Privacidade - Astral Legacy">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/512xnewhypixel.png" type="image/x-icon">
-  <meta name="description" content="Esta é a página de política de privacidade do servidor de Minecraft Hypixel.net">
+  <meta name="description" content="Esta é a página de política de privacidade do servidor de Minecraft Astral Legacy">
   
   
-  <title>Política de Privacidade - Hypixel</title>
+  <title>Política de Privacidade - Astral Legacy</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -46,7 +46,7 @@
                         <img src="assets/images/512xnewhypixel.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="#">Hypixel.net</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="#">Astral Legacy</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -57,12 +57,12 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#features13-2">O que é Hypixel</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#features24-4">Como entrar</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://forum.hypixel.net" target="_blank">Fóruns</a></li>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#features13-2">O que é Astral Legacy</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="como-entrar.html">Como entrar</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://forum.hypixel.net" target="_blank">Fóruns</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="rules.html">Regras</a>
                     </li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="shop.html"><span class="mobi-mbri mobi-mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span>Loja&nbsp;</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="shop.html"><span class="mobi-mbri mobi-mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span>Loja</a></div>
             </div>
         </div>
     </nav>
@@ -117,7 +117,7 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-6 my-auto px-4 align-left">
                 <p class="mbr-text text-grey mb-0 mbr-fonts-style display-7">
-                    © Copyright 2022 <strong>Hypixel</strong>. Todos os direitos reservados.<br><a href="imprint.html" class="text-primary" target="_blank">Impressum </a>| <a href="privacy.html" class="text-primary" target="_blank">Privacidade </a>| <a href="tos.html" class="text-primary" target="_blank">Termos de Serviço</a></p>
+                    © Copyright 2022 <strong>Astral Legacy</strong>. Todos os direitos reservados.<br><a href="imprint.html" class="text-primary" target="_blank">Impressum </a>| <a href="privacy.html" class="text-primary" target="_blank">Privacidade </a>| <a href="tos.html" class="text-primary" target="_blank">Termos de Serviço</a></p>
             </div>
             <div class="col-md-12 col-lg-6 px-4 align-right">
                 <div class="social-list">
