--- a/como-entrar.html
+++ b/como-entrar.html
@@ -52,12 +52,12 @@
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#features13-2">O que é Astral Legacy</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="como-entrar.html">Como entrar</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://forum.hypixel.net" target="_blank">Fóruns</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="rules.html">Regras</a></li>
                 </ul>
                 
                 <div class="navbar-buttons mbr-section-btn">
                     <a class="btn btn-primary display-4" href="shop.html"><span class="mobi-mbri mobi-mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span>Loja</a>
+                    <a class="btn btn-secondary display-4" href="auth.html"><span class="mobi-mbri mobi-mbri-login mbr-iconfont mbr-iconfont-btn"></span>Entrar</a>
                 </div>
             </div>
         </div>
@@ -190,23 +190,8 @@
             <div class="col-md-12 col-lg-6 px-4 align-right">
                 <div class="social-list">
                     <div class="soc-item">
-                        <a href="https://twitter.com" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
-                        </a>
-                    </div>
-                    <div class="soc-item">
-                        <a href="https://tiktok.com" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-tiktok socicon"></span>
-                        </a>
-                    </div>
-                    <div class="soc-item">
                         <a href="https://youtube.com" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon"></span>
-                        </a>
-                    </div>
-                    <div class="soc-item">
-                        <a href="https://instagram.com" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
                         </a>
                     </div>
                     <div class="soc-item">
