--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="rules.html">Regras</a>
                     </li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="shop.html"><span class="mobi-mbri mobi-mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span>Loja</a></div>
+                <div class="navbar-buttons mbr-section-btn">
+                    <a class="btn btn-primary display-4" href="shop.html"><span class="mobi-mbri mobi-mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span>Loja</a>
+                    <a class="btn btn-secondary display-4" href="auth.html"><span class="mobi-mbri mobi-mbri-login mbr-iconfont mbr-iconfont-btn"></span>Entrar</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -220,23 +223,8 @@
             <div class="col-md-12 col-lg-6 px-4 align-right">
                 <div class="social-list">
                     <div class="soc-item">
-                        <a href="https://twitter.com" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
-                        </a>
-                    </div>
-                    <div class="soc-item">
-                        <a href="https://tiktok.com" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-tiktok socicon"></span>
-                        </a>
-                    </div>
-                    <div class="soc-item">
                         <a href="https://youtube.com" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon"></span>
-                        </a>
-                    </div>
-                    <div class="soc-item">
-                        <a href="https://instagram.com" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
                         </a>
                     </div>
                     <div class="soc-item">
