--- a/privacy.html
+++ b/privacy.html
@@ -57,14 +57,23 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#features13-2">O que é Astral Legacy</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="como-entrar.html">Como entrar</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://forum.hypixel.net" target="_blank">Fóruns</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="rules.html">Regras</a>
-                    </li></ul>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#features13-2">O que é Astral Legacy</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="como-entrar.html">Como entrar</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="rules.html">Regras</a></li>
+                </ul>
                 
                 <div class="navbar-buttons mbr-section-btn">
                     <a class="btn btn-primary display-4" href="shop.html"><span class="mobi-mbri mobi-mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span>Loja</a>
-                    <a class="btn btn-secondary display-4" href="auth.html"><span class="mobi-mbri mobi-mbri-login mbr-iconfont mbr-iconfont-btn"></span>Entrar</a>
+                    <a class="btn btn-secondary display-4" href="auth.html" id="auth-btn"><span class="mobi-mbri mobi-mbri-login mbr-iconfont mbr-iconfont-btn"></span><span id="auth-text">Entrar</span></a>
+                    <div class="btn-group" id="profile-menu" style="display: none;">
+                        <button type="button" class="btn btn-info dropdown-toggle display-4" data-bs-toggle="dropdown" aria-expanded="false">
+                            <span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn"></span>Perfil
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#" onclick="logout()">Sair</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
