--- a/register.html
+++ b/register.html
@@ -209,7 +209,7 @@
 <script>
 // Configuração do Supabase
 const supabaseUrl = 'https://sofhwoqgudjnicwjgjhs.supabase.co';
-const supabaseKey = 'SUA-CHAVE-ANON';
+const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNvZmh3b3FndWRqbmljd2pnamhzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTYwMDU4MDgsImV4cCI6MjA3MTU4MTgwOH0.KgBo9hUkNESmCAK333E2quZdfvlGWNuTlsz5wnvASe4';
 const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
 // Função para mostrar mensagens
