--- a/auth.html
+++ b/auth.html
@@ -253,8 +253,8 @@
 
 <script>
 // Configuração do Supabase
-const supabaseUrl = 'https://sofhwoqgudjnicwjgjhs.supabase.co';
-const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNvZmh3b3FndWRqbmljd2pnamhzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTYwMDU4MDgsImV4cCI6MjA3MTU4MTgwOH0.KgBo9hUkNESmCAK333E2quZdfvlGWNuTlsz5wnvASe4';
+const supabaseUrl = 'YOUR_SUPABASE_URL';
+const supabaseKey = 'YOUR_SUPABASE_ANON_KEY';
 const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
 // Verificar se usuário está logado ao carregar a página
@@ -280,6 +280,9 @@ function showLoginForm() {
 // Função para mostrar área do usuário
 async function showUserArea(user) {
     try {
+        // Aguardar um pouco para garantir que o perfil foi criado
+        await new Promise(resolve => setTimeout(resolve, 1000));
+        
         const { data: profile } = await supabase
             .from('user_profiles')
             .select('nickname, phone')
@@ -297,6 +300,15 @@ async function showUserArea(user) {
         `;
     } catch (error) {
         console.error('Erro ao carregar perfil:', error);
+        // Mostrar informações básicas mesmo se não conseguir carregar o perfil
+        document.getElementById('login-form').style.display = 'none';
+        document.getElementById('register-form').style.display = 'none';
+        document.getElementById('user-area').style.display = 'block';
+        
+        document.getElementById('user-info').innerHTML = `
+            <strong>Email:</strong> ${user.email}<br>
+            <em>Carregando informações do perfil...</em>
+        `;
     }
 }
 
@@ -330,6 +342,7 @@ document.getElementById('loginForm').addEventListener('submit', async (e) => {
         showMessage('Login realizado com sucesso!');
         await showUserArea(data.user);
     } catch (error) {
+        console.error('Erro no login:', error);
         showMessage('Erro no login: ' + error.message, 'danger');
     }
 });
