--- a/register.html
+++ b/register.html
@@ -208,8 +208,8 @@
 
 <script>
 // Configuração do Supabase
-const supabaseUrl = 'https://sofhwoqgudjnicwjgjhs.supabase.co';
-const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNvZmh3b3FndWRqbmljd2pnamhzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTYwMDU4MDgsImV4cCI6MjA3MTU4MTgwOH0.KgBo9hUkNESmCAK333E2quZdfvlGWNuTlsz5wnvASe4';
+const supabaseUrl = 'YOUR_SUPABASE_URL';
+const supabaseKey = 'YOUR_SUPABASE_ANON_KEY';
 const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
 // Função para mostrar mensagens
@@ -237,34 +237,38 @@ document.getElementById('registerForm').addEventListener('submit', async (e) => 
     }
 
     try {
-        // Criar usuário no Auth
-        const { data, error } = await supabase.auth.signUp({ email, password });
+        // Criar usuário no Auth com metadados
+        const { data, error } = await supabase.auth.signUp({
+            email,
+            password,
+            options: {
+                data: {
+                    nickname: nickname,
+                    phone: phone
+                }
+            }
+        });
 
         if (error) throw error;
 
-        // Caso o email já exista
-        if (data.user && data.user.identities.length === 0) {
+        // Verificar se o usuário foi criado
+        if (!data.user) {
             showMessage('Este e-mail já está cadastrado!', 'danger');
             return;
         }
 
-        // Criar perfil extra
-        if (data.user) {
-            const { error: profileError } = await supabase
-                .from('user_profiles')
-                .insert([{ id: data.user.id, nickname, phone }]);
-
-            if (profileError) {
-                showMessage('Erro ao salvar perfil: ' + profileError.message, 'danger');
-                return;
-            }
+        // Verificar se o email já existe mas não foi confirmado
+        if (data.user && data.user.identities && data.user.identities.length === 0) {
+            showMessage('Este e-mail já está cadastrado. Verifique sua caixa de entrada para confirmar.', 'warning');
+            return;
         }
 
-        // Mensagem final
-        showMessage('Conta criada! Verifique seu e-mail para confirmar.', 'success');
+        // Sucesso no cadastro
+        showMessage('Conta criada com sucesso! Você já pode fazer login.', 'success');
         setTimeout(() => window.location.href = 'auth.html', 3000);
 
     } catch (err) {
+        console.error('Erro detalhado:', err);
         showMessage('Erro no cadastro: ' + err.message, 'danger');
     }
 });
